# techniques-of-effective-programming

./: .gitignore
lab01/: CTable.cpp  CTable.h  main.cpp
lab02/: CMakeLists.txt  main.cpp
lab02/include/: CNumber.h
lab02/src/CNumber/: CNumber.cpp  CNumberMathOperations.cpp  CNumberOperators.cpp
lab03/: CMakeLists.txt  main.cpp
lab03/include/: StringUtils.h  UI.h
lab03/include/ExpressionTreeHeaders/: ExpressionTree.h  Node.h
lab03/src/: UI.cpp
lab03dziedzic/: main.cpp
lab03dziedzic/inclulde/: CLeaf.h  CNode.h  CNodeOneArguemnt.h  CNodeTwoArguments.h  CTree.h  CVariable.h
lab03dziedzic/src/: CLeaf.cpp  CNodeOneArgument.cpp  CNodeTwoArguments.cpp  CTree.cpp  CVariable.cpp
lab04/: CMakeLists.txt  main.cpp
lab04/include/ExpressionTreeHeaders/: ExpressionTree.h  Node.h
lab04/inclulde/: CLeaf.h  CNodeOneArguemnt.h  CNodeTwoArguments.h  CTree.h  CVariable.h  ExpressionTree.h  StringUtils.h  UI.h
lab04/inclulde/CNodeHeaders/: CLeaf.h  CNode.h  CNodeOneArguemnt.h  CNodeTwoArguments.h  CVariable.h  Node.h  NodeConstant.h  NodeOperatorOneArgument.h  NodeOperatorTwoArguments.h  NodeVariable.h
lab04/modyfikacja/: MyPointer.tpp  Pointer.tpp
lab04/src/: CLeaf.cpp  CNodeOneArgument.cpp  CNodeTwoArguments.cpp  CTree.cpp  CVariable.cpp  ExpressionTree.cpp  ExpressionTree.tpp  StringUtils.cpp  UI.cpp  UI.tpp
lab04/src/CNodeSource/: CLeaf.cpp  CNodeOneArgument.cpp  CNodeTwoArguments.cpp  CVariable.cpp  NodeConstant.cpp  NodeConstant.tpp  NodeOperatorOneArgument.tpp  NodeOperatorTwoArguments.cpp  NodeOperatorTwoArguments.tpp  NodeVariable.cpp  NodeVariable.tpp
lab04/src/ExpressionTreeSrc/: ExpressionTree.cpp  Node.cpp
lab04test/: CMakeLists.txt
lab04test/inclulde/: ExpressionTree.h  UI.h
lab04test/inclulde/CNodeHeaders/: Node.h  NodeConstant.h  NodeOperatorTwoArguments.h  NodeVariable.h
lab04test/inclulde/CNodeTPP/: ExpressionTree.tpp  NodeConstant.tpp  NodeOperatorOneArgument.tpp  NodeOperatorTwoArguments.tpp  NodeVariable.tpp
lab04test/src/: StringUtils.cpp
lab04test/src/CNodeSource/: ExpressionTree.cpp  Nodes.cpp
lab05/: CMakeLists.txt  main.cpp
lab05/include/: UI.tpp
lab05/include/ExpressionTree/: ExpressionTree.h  ExpressionTree.tpp  Node.h  NodeConstant.h  NodeOperatorOneArgument.h  NodeOperatorTwoArguments.h  NodeVariable.h
lab05/inclulde/: ExpressionTree.h  UI.h
lab05/inclulde/CNodeHeaders/: Node.h  NodeConstant.h  NodeOperatorOneArgument.h  NodeOperatorTwoArguments.h  NodeVariable.h
lab05/inclulde/ExpressionTree/: ExpressionTree.h  ExpressionTree.tpp  NodeConstant.h  NodeOperatorOneArgument.h  NodeOperatorTwoArguments.h  NodeVariable.h
lab05/modyfikacja5/: MyArray.h  MyArray2.h
lab05/my-pointer/: ReferenceCounter.cpp  ReferenceCounter.h  SmartPointer.h
lab05/src/: ExpressionTree.tpp  ReferenceCounter.cpp  StringUtils.cpp  UI.tpp
lab05/src/CNodeSource/: NodeConstant.tpp  NodeOperatorOneArgument.tpp  NodeOperatorTwoArguments.tpp
